--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,12 +9,13 @@
             android:icon="@drawable/baseline_map_24"
             android:title="@string/menu_servicio" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
-        <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_slideshow" />
+        <item
+            android:id="@+id/nav_info"
+            android:icon="@drawable/baseline_info_24"
+            android:title="@string/menu_info" />
+
     </group>
 </menu>
