--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#FF808080</color>
     <color name="green">#4CAF50</color>
-    <color name="red">#F44336</color>
+    <color name="red">#F85F55</color>
     <color name="yellow">#FFC107</color>
 </resources>
