--- a/app/src/main/res/drawable/bg_button.xml
+++ b/app/src/main/res/drawable/bg_button.xml
@@ -2,11 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid
-        android:color="@color/white"/>
-    <corners
-        android:topLeftRadius="16dp"
-        android:topRightRadius="16dp"/>
 
+    <solid
+        android:color="@color/blue_light"
+        />
+
+    <corners
+        android:radius="32dp"/>
 
 </shape>
