--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,9 +9,9 @@
             android:icon="@drawable/baseline_map_24"
             android:title="@string/menu_servicio" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:id="@+id/nav_log_out"
+            android:icon="@drawable/baseline_logout_24"
+            android:title="@string/menu_logout" />
         <item
             android:id="@+id/nav_info"
             android:icon="@drawable/baseline_info_24"
