--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_salir"
-        android:orderInCategory="100"
-        android:title="@string/action_salir"
-        app:showAsAction="never" />
+        android:id="@+id/action_refresh"
+        android:title="@string/action_refresh"
+        android:icon="@drawable/baseline_refresh_24"
+        app:showAsAction="always" />
 </menu>
