--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,11 @@
     <color name="naranja">#FFC107</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="gray">#FF808080</color>
+    <color name="gray">#DBDBDB</color>
     <color name="green">#4CAF50</color>
     <color name="red">#F85F55</color>
     <color name="yellow">#FFC107</color>
+    <color name="gray_ligth">#DEDFE3</color>
+    <color name="blue_light">#F7658AD5</color>
+    <color name="gray_color">#919191</color>
 </resources>
