--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,6 +23,13 @@
 
     <style name="Theme.OperadoresFuneraria.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="AppFullScreenTheme" parent="@style/Theme.AppCompat.Light.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowBackground">@drawable/splash_background</item>
+    </style>
 
     <style name="TransparentDialog" parent="android:Theme.Dialog">
         <item name="android:windowIsTranslucent">true</item>
