--- a/app/src/main/res/layout/bottom_sheet_info.xml
+++ b/app/src/main/res/layout/bottom_sheet_info.xml
@@ -53,10 +53,12 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/btnRuta"
             android:visibility="visible"
-            android:layout_width="140dp"
+            android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
             android:background="@drawable/bg_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view">
