--- a/app/src/main/res/layout/dialog_refresh_service.xml
+++ b/app/src/main/res/layout/dialog_refresh_service.xml
@@ -3,13 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="16dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.airbnb.lottie.LottieAnimationView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         app:lottie_autoPlay="true"
+        app:lottie_rawRes="@raw/loading"
         app:lottie_loop="true" />
 
     <TextView
@@ -19,6 +19,7 @@
         android:layout_gravity="center"
         android:text="Refrescando servicio..."
         android:textAlignment="center"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:textStyle="bold|italic" />
 
 </LinearLayout>
