--- a/app/src/main/res/layout/dialog_refresh_service.xml
+++ b/app/src/main/res/layout/dialog_refresh_service.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Refrescando servicio..."
+        android:text="Espere porfavor..."
         android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="bold|italic" />
