--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#DBDBDB</color>
     <color name="green">#4CAF50</color>
+    <color name="green_background">#CCF8CE</color>
     <color name="red">#F85F55</color>
     <color name="yellow">#FFC107</color>
     <color name="gray_ligth">#DEDFE3</color>
